--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>CVMOHAMAD</title>
+	<title>ANNEEHANSEN</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -71,8 +71,8 @@
 
    			<div class="col-twelve">
 
-	   			<h5>Hello, World.</h5>
-	   			<h1>I'm Mohamad Abou Alnaser.</h1>
+	   			<h5>innovating oceanic instrumentation while prioritizing accessibility</h5>
+	   			<h1>Anne E. Hansen</h1>
 
 	   			<p class="intro-position">
 	   				<span>Front-end Developer</span>
