update intro info

--- a/index.html
+++ b/index.html
@@ -71,12 +71,13 @@
 
    			<div class="col-twelve">
 
-	   			<h5>innovating oceanic instrumentation while prioritizing accessibility</h5>
+	   			<h5>innovating marine instrumentation while prioritizing accessibility</h5>
 	   			<h1>Anne E. Hansen</h1>
 
 	   			<p class="intro-position">
-	   				<span>Front-end Developer</span>
-	   				<span>Back-end Developer</span>
+	   				<span>Coastal & Polar Ecology</span>
+	   				<span>Physical Oceanography</span>
+                    <span>Marine Engineering</span>
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">En savoir plus</a>
