switch accent color

--- a/styles.html
+++ b/styles.html
@@ -24,7 +24,7 @@
    <style type="text/css" media="screen">
 
    	#styles { 
-   		background: white;
+   		background: #FFFEFA;
    		padding-top: 12rem;
    		padding-bottom: 12rem;
    	}
