--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>ANNEEHANSEN</title>
+	<title>anneehansen</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -43,15 +43,15 @@
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   		<div class="logo">
-		         <a href="index.html">CVMOHAMAD</a>
+		         <a href="index.html">MENU</a>
 		      </div>
 
 		   	<nav id="main-nav-wrap">
 					<ul class="main-navigation">
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
-						<li><a class="smoothscroll"  href="#about" title="">A PROPOS</a></li>
-						<li><a class="smoothscroll"  href="#Work" title="">Work Experience</a></li>
-						<li><a class="smoothscroll"  href="#MORE" title="">MORE</a></li>
+						<li><a class="smoothscroll"  href="#about" title="">CV</a></li>
+						<li><a class="smoothscroll"  href="#Work" title="">Projects</a></li>
+						<li><a class="smoothscroll"  href="#MORE" title="">Outreach</a></li>
 
 					</ul>
 				</nav>
