update intro button

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <span>Marine Engineering</span>
 	   			</p>
 
-	   			<a class="button stroke smoothscroll" href="#about" title="">En savoir plus</a>
+	   			<a class="button stroke smoothscroll" href="#about" title="">Learn More</a>
 
 	   		</div>
 
