--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
    	<div class="row section-intro">
    		<div class="col-twelve">
 
-   			<h5>A PROPOS</h5>
+   			<h5>ABOUT ME</h5>
 
 
    			<div class="intro-info">
@@ -131,24 +131,17 @@ mobile. </p>
 
    			<ul class="info-list">
    				<li>
-   					<strong>Nom et Prénom:</strong>
-   					<span>ABOU ALNASER Mohamad</span>
-   				</li>
-   				<li>
-   					<strong>Date de naissance:</strong>
-   					<span>Né le : 15 / 09 / 1982</span>
+   					<strong>Anne E. Hansen</strong>
+					<span>B.S. Marine Science Major, Computer Science Minor</span>
+					<span>Cal State Monterey Bay, Dept. of Marine Science</span>
    				</li>
                 <li>
    					<strong>Email:</strong>
-   					<span>m.aboualnasser@gmail.com</span>
-   				</li>
-                <li>
-   					<strong>Adress:</strong>
-   					<span>2 rue Barbes, 92 210 Montrouge</span>
+   					<span>anhansen@csumb.edu</span>
    				</li>
    				<li>
    					<strong>Phone:</strong>
-   					<span>+ 33 6 27 76 01 44</span>
+   					<span>(916)430-9166</span>
    				</li>
 
 
