--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
    			<div class="intro-info">
 
-   				<img src="images/MOHAMAD.png" alt="Profile Picture">
+   				<img src="images/ANNE.jpg" alt="Profile Picture">
 
    				<p class="lead">Actuellement apprenant à
 Simplon.co en développement Web
