--- a/index.html
+++ b/index.html
@@ -106,17 +106,22 @@
 
    				<img src="images/ANNE.jpg" alt="Profile Picture">
 
-   				<p class="lead">Actuellement apprenant à
-Simplon.co en développement Web
-PHP, je recherche un emploi, à partir
-du mois d’octobre 2016, qui me
-permettrait dans un premier temps
-d’affiner mes compétences
-techniques et mes qualités
-professionnelles.
-J’habite actuellement dans la
-banlieue parisienne, mais je suis
-mobile. </p>
+   				<p class="lead">Conducting research with the 
+					Biological Oceanography Lab at California 
+					State University, Monterey Bay, I use my 
+					platform as an upcoming marine scientist 
+					to empower students with learning disabilities, 
+					like me, to participate in the sciences. 
+					Through my work as a marine engineer, 
+					I create inexpensive and easy-to-use oceanographic 
+					technology that bridges the knowledge gap between 
+					academia and the greater public. This way, the 
+					discoveries researchers make in the lab can be 
+					implemented both skillfully and effectively by 
+					environmental policy makers and management 
+					around the world.
+					
+					 </p>
    			</div>
 
    		</div>
