--- a/index.html
+++ b/index.html
@@ -156,33 +156,33 @@
 
    		<div class="col-six tab-full">
 
-   			<h3>COMPETENCES</h3>
+   			<h3>SKILLS</h3>
 
 
 				<ul class="skill-bars">
 				   <li>
 				   	<div class="progress percent90"><span>90%</span></div>
-				   	<strong>HTML5</strong>
+				   	<strong>Python Programming</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>CSS</strong>
+				   	<strong>Geospatial Analysis & Mapping</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent70"><span>70%</span></div>
-				   	<strong>JQuery</strong>
+				   	<strong>Robotics & Circuitry</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>Bootstrap</strong>
+				   	<strong>Multivariate Data Analysis</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent75"><span>75%</span></div>
-				   	<strong>PHP</strong>
+				   	<strong>Software Development</strong>
 				   </li>
 				   <li>
                     <div class="progress percent75"><span>75%</span></div>
-				   	<strong>Java script</strong>
+				   	<strong>Machine Learning & Modeling</strong>
 				   </li>
 
 				</ul> <!-- /skill-bars -->
