--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 				   </li>
 				   <li>
 				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>Geospatial Analysis & Mapping</strong>
+				   	<strong>Geospatial Analysis</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent70"><span>70%</span></div>
@@ -182,7 +182,7 @@
 				   </li>
 				   <li>
                     <div class="progress percent75"><span>75%</span></div>
-				   	<strong>Machine Learning & Modeling</strong>
+				   	<strong>Machine Learning</strong>
 				   </li>
 
 				</ul> <!-- /skill-bars -->
