--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Embaochez-moi</a>
-   			<a href="C:\Users\hanan\Documents\GitHub\hananniesen.github.io\images\CV - Digital Version - Anne Hansen.pdf" target="_blank" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="C:\Users\hanan\Documents\GitHub\hananniesen.github.io\images\CV_DigitalVersion_AnneHansen.pdf" target="_blank" title="Download CV" class="button button-primary">Download CV</a>
    		</div>
    	</div>
 
