update path again

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 				   </li>
 				   <li>
 				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>Geospatial Analysis</strong>
+				   	<strong>Geospatial Analysis & Mapping</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent70"><span>70%</span></div>
@@ -182,7 +182,7 @@
 				   </li>
 				   <li>
                     <div class="progress percent75"><span>75%</span></div>
-				   	<strong>Machine Learning</strong>
+				   	<strong>Machine Learning & Modeling</strong>
 				   </li>
 
 				</ul> <!-- /skill-bars -->
@@ -193,8 +193,8 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Embaochez-moi</a>
-   			<a href="C:\Users\hanan\Documents\GitHub\hananniesen.github.io\images\CV_DigitalVersion_AnneHansen.pdf" target="_blank" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Get in Touch</a>
+   			<a href="https://github.com/hananniesen/hananniesen.github.io/blob/main/images/CV_DigitalVersion_AnneHansen.pdf" target="_blank" title="Download CV" class="button button-primary">Download CV</a>
    		</div>
    	</div>
 
