biological oceanography research exp.

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
    		<div class="col-twelve resume-header">
 
-   			<h2>Expériences Professionelles</h2>
+   			<h2>Research Experience</h2>
 
    		</div> <!-- /resume-header -->
 
@@ -222,9 +222,14 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>COMUS | France - Déploiement réseau – 2015</h3>
-	   					<p>Déploiement et mise en service des équipements radio et
-transmission du réseau Bouygues Télécom en Ile-deFrance.
+	   					<h3>
+							Seagrass Ecology and Modeling | Biological Oceanography Lab, CSUMB — June 2022 - Present</h3>
+	   					<p>Project 1: Translation of Grasslight: A Seagrass Population Model </br>
+							Outcome: Open-source and accessible submerged canopy model that can improve current seagrass management protocol </br>
+							Project 2: Fortran to Python Source-to-Source Compiler </br>
+							Outcome: Compiler that can translate ecological modeling software from Fortran to Python to increase its accessibility  </br>
+							Project 3: Measuring Irradiance and Productivity of Zostera Marina Canopies</br>
+							Outcome: Provide research institutions and coastal management with low-cost instrumentation to survey seagrass meadows, increasing overall access and spatial resolution of surveys
 </p>
 	   				</div>
 
