update research experience

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>
-							Seagrass Ecology and Modeling | Biological Oceanography Lab, CSUMB — June 2022 - Present</h3>
+							Seagrass Ecology and Modeling | Biological Oceanography Lab, Cal State Monterey Bay — June 2022 - Present</h3>
 	   					<p>Project 1: Translation of Grasslight: A Seagrass Population Model </br>
 							Outcome: Open-source and accessible submerged canopy model that can improve current seagrass management protocol </br>
 							Project 2: Fortran to Python Source-to-Source Compiler </br>
@@ -242,14 +242,30 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Intracom | Syrie – Gestionnaire d e s i t e d e
-télécommunications 2008 / 2010</h3>
-	   					<p>Déploiement du projet de réseau point-à-multipont</p>
+	   					<h3>California Subtidal Community Surveys | Marine Biogeography Capstone, Cal State Monterey Bay — Aug 2024 - Dec 2024</h3>
+	   					<p>Project 1: Latitudinal Changes in California's Subtidal Communities</br>
+							Outcome: Annual report on latitudinal changes in fish, invertebrate, and habitat composition and abundance, with additional oral dissemination to CSUMB community at Fall Capstone Festival</p>
 	   				</div>
 
 
 
-	   			</div> <!-- /timeline-block -->
+				</div> <!-- /timeline-block -->
+
+				<div class="timeline-block">
+
+					<div class="timeline-ico">
+						<i class="fa fa-graduation-cap"></i>
+					</div>
+
+					<div class="timeline-header">
+						<h3>Arctic Mixing Visualization and Analysis | Ocean Mixing Research Group, Oregon State University — June 2023 - Aug 2023</h3>
+						<p>Project 1: Latitudinal Changes in California's Subtidal Communities</br>
+						Outcome: Annual report on latitudinal changes in fish, invertebrate, and habitat composition and abundance, with additional oral dissemination to CSUMB community at Fall Capstone Festival</p>
+					</div>
+
+
+
+				</div> <!-- /timeline-block -->
 
 
    			</div> <!-- /timeline-wrap -->
