--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
 
 					<div class="timeline-header">
 						<h3>Arctic Mixing Visualization and Analysis | Ocean Mixing Research Group, Oregon State University — June 2023 - Aug 2023</h3>
-						<p>Project 1: Latitudinal Changes in California's Subtidal Communities</br>
-						Outcome: Annual report on latitudinal changes in fish, invertebrate, and habitat composition and abundance, with additional oral dissemination to CSUMB community at Fall Capstone Festival</p>
+						<p>Project 1: Visualization of Wave-Driven Surface Mixing in the Arctic</br>
+							Outcome: Series of visualizations and non-dimensional parameters that map wave-driven mixing in the Arctic Circle to improve accuracy of current climate models</p>
 					</div>
 
 
@@ -278,7 +278,7 @@
 
    		<div class="col-twelve resume-header">
 
-   			<h2>FORMATION ET DIPLOMES</h2>
+   			<h2>PRESENTATIONS</h2>
 
    		</div> <!-- /resume-header -->
 
@@ -293,18 +293,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Simplon.co – Montreuil </h3>
-	   					<p>2016 (7 mois)- Present</p>
+	   					<h3>Oral Presentations</h3>
 	   				</div>
 
 	   				<div class="timeline-content">
-
-	   					<p>Formation intensive au développement Web (HTML, CSS,
-JS, PHP, Symfony)
-> Animation d’ateliers d’initiation à la programmation à
-destination des enfants et des adultes (Minecraft, Code
-n’Slash, Scratch)
-> Participation au Hackathons # RATP.</p>
+	   					<p>Hansen, Anne (2023) Mapping the Influence of Wave-Induced Ocean Surface Mixing in the Arctic through Non-Dimensional Parameters. College of Earth, Ocean, and Atmospheric Sciences (CEOAS) Summer REU Symposium 2023, Oregon State University.</p>
+						<p>Hansen, Anne (2023) Increasing Accessibility of Seagrass Ecology through Source-to-Source Compiling. Undergraduate Research Opportunities Center (UROC) Spring Showcase, California State University, Monterey Bay.</p>
+						<p>Hansen, Anne (2024, Upcoming) Annual Latitudinal Survey of Subtidal Communities Along the California Coast. Marine Science Fall Capstone Festival, California State University, Monterey Bay, Seaside, CA.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -316,51 +311,18 @@ n’Slash, Scratch)
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Microsoft Certified – Microsoft Certified IT Professional
-(MCITP) </h3>
-	   					<p>Syrie | 2013</p>
+	   					<h3>Poster Presentations</h3>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<p>Certification Cisco Microsoft : administrateur de bases de
-données .</p>
+						<p>Hansen, Anne (2024) Shining a Light: Measuring Light Absorption and Irradiance through Eelgrass, Zostera Marina, meadows. Western Society of Naturalists (WSN) Conference, Hilton DoubleTree, Portland, OR.</p>
+						<p>Hansen, Anne (2024) Shining a Light: Measuring Light Absorption and Irradiance through Eelgrass, Zostera Marina, meadows. Council for Ocean Affairs, Science, and Technology (COAST) Annual Meeting, California State University (CSU) Chancellor's Office, Long Beach, CA.</p>
+						<p>Hansen, Anne (2024) Applications of Low-cost Sensors in Shallow Underwater Sensor Networks for Monitoring Submerged Canopies. Undergraduate Research Opportunities Center (UROC) Summer Symposium, California State University, Monterey Bay, Seaside, CA.</p>
+						<p>Hansen, Anne (2024) Mapping the Influence of Wave-Induced Ocean Surface Mixing in the Arctic through Non-Dimensional Parameters. 2024 Goldwater Symposium, Remote Conference.</p>
+						<p>Hansen, Anne (2024) Shining a Light: Measuring Light Absorption and Irradiance through Eelgrass, Zostera Marina, meadows. Undergraduate Research Opportunities Center (UROC) Spring Showcase, California State University, Monterey Bay, Seaside, CA.</p>
+						<p>Hansen, Anne (2022) Introducing Open Source Programming to Seagrass Ecology — Do Paywalls Belong in the Fight for our Climate?. Undergraduate Research Opportunities Center (UROC) Summer Symposium, California State University, Monterey Bay, Seaside, CA.</p>
 	   				</div>
 
-	   			</div> <!-- /timeline-block -->
-
-	   			<div class="timeline-block">
-
-	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
-	   				</div>
-
-	   				<div class="timeline-header">
-	   					<h3>Université de Damas - Diplôme d’ingénieur</h3>
-	   					<p>Syrie | 2008</p>
-	   				</div>
-
-	   				<div class="timeline-content">
-
-	   					<p>Ingénieur Génie Electrique, option: génie électrique et de
-communication.</p>
-	   				</div>
-	   				<div class="timeline-block">
-
-	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
-	   				</div>
-
-	   				<div class="timeline-header">
-	   					<h3>Cisco Courses – Cisco Certified Network Associate Level
-(CCNA) New Horizon</h3>
-	   					<p>Syrie | 2007</p>
-	   				</div>
-
-	   				<div class="timeline-content">
-
-	   					<p>Certification Cisco CCNA Routing and Switching :
-technicien réseau .</p>
-	   				</div>
 
 	   			</div> <!-- /timeline-block -->
 
