--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 		<div class="row section-intro">
    		<div class="col-twelve">
 
-   			<h5>MORE</h5>
+   			<h5>INTENDED EDUCATION PATHWAY</h5>
 
 
 
@@ -371,10 +371,13 @@
 
 	            <div class="service-content">
 
-	            	<h3>SYSTEMES ET BASE DE DONNEES</h3>
+	            	<h3>UNDERGRADUATE DEGREE IN MARINE SCIENCE</h3>
 
-		            <p class="desc"># Windows # Ubuntu
-# MySQL </br># Firebase.
+		            <p class="desc">Complete Bachelors of Science,
+						majoring in Marine Science and Minoring 
+						Computer Science at California State University, 
+						Monterey Bay while conducting Undergraduate 
+						Research
 	        			</p>
 
 	            </div>
@@ -383,60 +386,37 @@
 
 					<span class="icon"><i class="icon-earth"></i></span>
 
-	            <div class="service-content">
+					<div class="service-content">
 
-	            	<h3>LANGUES</h3>
-
-		            <ul class="skill-bars">
-				   <li>
-				   	<div class="progress percent100"><span>100%</span></div>
-				   	<strong>ARABE</strong>
-				   </li>
-				   <li>
-				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>ANGLAIS</strong>
-				   </li>
-				   <li>
-				   	<div class="progress percent70"><span>70%</span></div>
-				   	<strong>FRANcAIS</strong>
-				   </li>
-				   </ul>
-
-	            </div>
+						<h3>PHD IN APPLIED OCEAN ENGINEERING</h3>
+	
+						<p class="desc">Attend a research-based PhD 
+							program, focused on teaching core mechanical
+							and electrical engineering principles and
+							applying those to Marine Science Research
+							</p>
+	
+					</div>
 	            </div> <!-- /services-list -->
 
 	      	<div class="service">
 
 	      		<span class="icon"><i class="icon-chat"></i></span>
 
-	            <div class="service-content">
+				  <div class="service-content">
 
-	            	 <h3>Personnalité</h3>
+						<h3>POST DOC AND CAREER DEVELOPMENT</h3>
 
-		            <p class="desc"> Personnalité : # sérieux # dynamique # organisé
-# travail en équipe .
-	         		</p>
+						<p class="desc">Further develop skills gained
+							in both Bachelor's and PhD programs by focusing
+							on practical applications and field experience,
+							preparing for a full-time position in Applied
+							Ocean Sciences
+							</p>
 
-	         	</div>
+					</div>
 
 				</div> <!-- /service -->
-
-				<div class="service">
-
-					<span class="icon"><i class="icon-window"></i></span>
-
-	            <div class="service-content">
-
-	            	<h3>Centres d’intérêts</h3>
-
-		            <p class="desc">Centres d’intérêts : # cinéma d’action # poésie classique #
-randonnée.
-	         		</p>
-
-	            </div>
-
-			   </div> <!-- /service -->
-
 
 
    	</div> <!-- /services-content -->
