added new images and image test

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 
    			<div class="service">
 
-			   	<span class="icon"><i class="icon-window"></i></span>
+			   	<span class="icon"><img src="images/ANNE.jpg" alt="Profile Picture"></span>
 
 	            <div class="service-content">
 
