--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 
    			<div class="service">
 
-			   	<span class="icon"><img src="images/ANNE.jpg" alt="Profile Picture"></span>
+			   	<span class="icon"><img src="images/undergrad.jpg" alt="Profile Picture"></span>
 
 	            <div class="service-content">
 
@@ -384,7 +384,7 @@
 
 			   </div> <!-- /service --><div class="service">
 
-					<span class="icon"><i class="icon-earth"></i></span>
+				<span class="icon"><img src="images/phd.jpg" alt="Profile Picture"></span>
 
 					<div class="service-content">
 
@@ -401,7 +401,7 @@
 
 	      	<div class="service">
 
-	      		<span class="icon"><i class="icon-chat"></i></span>
+				<span class="icon"><img src="images/post_doc.jpg" alt="Profile Picture"></span>
 
 				  <div class="service-content">
 
