removed images and fixed social links

--- a/index.html
+++ b/index.html
@@ -531,8 +531,8 @@
 
              			<ul class="footer-social">
         			      
-        			      <li><a target="_blank"href="https://twitter.com/MOHAMADABOUALNA"><i class="fa fa-twitter"></i></a></li>
-        			      <li><a target="_blank"href="https://github.com/aboualnaser"><i class="fa fa-github" aria-hidden="true"></i>
+        			      <li><a target="_blank"href="https://www.linkedin.com/in/anne-hansen/"><i class="fa fa-linkedin"></i></a></li>
+        			      <li><a target="_blank"href="https://github.com/hananniesen"><i class="fa fa-github" aria-hidden="true"></i>
 </a></li>
         			   </ul>
 
