--- a/index.html
+++ b/index.html
@@ -430,44 +430,6 @@
 
    <!-- contact
    ================================================== -->
-	<section id="contact">
-
-		<div class="row section-intro">
-   		<div class="col-twelve">
-
-   			<h5>Contact</h5>
-   			<h1>N'hésitez pas à me contacter.</h1>
-
-
-
-   		</div>
-   	</div> <!-- /section-intro -->
-
-   	<div class="row contact-form">
-
-   		<div class="col-twelve">
-
-            <!-- form -->
-            <form id="contactform" action="//formspree.io/m.aboualnasser@gmail.com" method="POST">
-
-      <input type="text" name="name" placeholder="Votre Nome">
-      <input type="email" name="_replyto" placeholder="Votre Mail">
-      <textarea name="message" placeholder="Votre Message"></textarea>
-      <input type="submit" value="Envoyez">
-  </form>
- 						    <!-- Form End -->
-
-            <!-- contact-warning -->
-            <div id="message-warning">
-            </div>
-            <!-- contact-success -->
-      		<div id="message-success">
-               <i class="fa fa-check"></i>Your message was sent, thank you!<br>
-      		</div>
-
-         </div> <!-- /col-twelve -->
-
-   	</div> <!-- /contact-form -->
 
    	<div class="row contact-info">
 
@@ -477,12 +439,10 @@
    				<i class="icon-pin"></i>
    			</div>
 
-   			<h5>Pour me contacter</h5>
+   			<h5>Location</h5>
 
    			<p>
-           2 rue barbes<br>
-            92120<br>
-            Montrouge
+				Marina, CA, USA
             </p>
 
    		</div>
@@ -493,9 +453,9 @@
    				<i class="icon-mail"></i>
    			</div>
 
-   			<h5>Envoyez-moi un e-mail</h5>
+   			<h5>Send an e-mail</h5>
 
-   			<p>m.aboualnasser@gmail.com
+   			<p>anhansen@csumb.edu
 
 
 			   </p>
@@ -511,7 +471,7 @@
    			<h5>Call Me At</h5>
 
    			<p>Phone:
-			   	+ 33 6 27 76 01 44<br>
+			   	(916)430-9166<br>
 
 			   </p>
 
