--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">CV</a></li>
 						<li><a class="smoothscroll"  href="#Work" title="">Projects</a></li>
-						<li><a class="smoothscroll"  href="#MORE" title="">Outreach</a></li>
+						<li><a class="smoothscroll"  href="#MORE" title="">More</a></li>
 
 					</ul>
 				</nav>
