update section names

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 					<ul class="main-navigation">
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">CV</a></li>
-						<li><a class="smoothscroll"  href="#Work" title="">Projects</a></li>
-						<li><a class="smoothscroll"  href="#MORE" title="">More</a></li>
+						<li><a class="smoothscroll"  href="#projects" title="">Projects</a></li>
+						<li><a class="smoothscroll"  href="#more" title="">More</a></li>
 
 					</ul>
 				</nav>
