contact button fix

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Get in Touch</a>
+   			<a href="#more" title="Hire Me" class="button stroke smoothscroll">Get in Touch</a>
    			<a href="https://docs.google.com/document/d/1Fj5OB0d9oUpO-buaX9HJf-ZGe0jnkyyZv4Lg026jzoQ/edit?usp=sharing" target="_blank" title="Download CV" class="button button-primary">Download CV</a>
    		</div>
    	</div>
