--- a/styles.html
+++ b/styles.html
@@ -110,6 +110,7 @@
          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
          <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+		 <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
@@ -588,6 +589,7 @@
 			      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
 			      <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
 			      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+				  <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 			   </ul> 
 	      		
 	      </div>
